Изменение названий и перенос кода
