# TestSwaggerApi/swagger.json
@@ -6,6 +6,30 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/GetResource": {
+      "get": {
+        "tags": [
+          "GetResource"
+        ],
+        "operationId": "GetResource_Get",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "array",
+                    "items": {}
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/SaveData": {
       "post": {
         "tags": [
@@ -98,30 +122,6 @@
         "responses": {
           "200": {
             "description": ""
-          }
-        }
-      }
-    },
-    "/WeatherForecast": {
-      "get": {
-        "tags": [
-          "WeatherForecast"
-        ],
-        "operationId": "WeatherForecast_Get",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "array",
-                    "items": {}
-                  }
-                }
-              }
-            }
           }
         }
       }
